logs/cql-kernel.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cql_kernel'...
Compiling './lib/python3.5/site-packages/cql_kernel/cqlsh.py'...
***   File "./lib/python3.5/site-packages/cql_kernel/cqlsh.py", line 148
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cql_kernel/lib'...
Listing './lib/python3.5/site-packages/cql_kernel-3.0.1.egg-info'...
Listing './lib/python3.5/site-packages/cqlshlib_cql_kernel'...
Compiling './lib/python3.5/site-packages/cqlshlib_cql_kernel/copyutil.py'...
***   File "./lib/python3.5/site-packages/cqlshlib_cql_kernel/copyutil.py", line 344
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cqlshlib_cql_kernel/cqlhandling.py'...
***   File "./lib/python3.5/site-packages/cqlshlib_cql_kernel/cqlhandling.py", line 259
    print "cql_complete(%r, partial=%r)" % (text, partial)
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cqlshlib_cql_kernel/pylexotron.py'...
***   File "./lib/python3.5/site-packages/cqlshlib_cql_kernel/pylexotron.py", line 149
    print "Trying completer %r with %r" % (completer, ctxt)
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cqlshlib_cql_kernel/test'...
Compiling './lib/python3.5/site-packages/cqlshlib_cql_kernel/test/ansi_colors.py'...
***   File "./lib/python3.5/site-packages/cqlshlib_cql_kernel/test/ansi_colors.py", line 19
    LIGHT = 010
              ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/cqlshlib_cql_kernel/test/run_cqlsh.py'...
***   File "./lib/python3.5/site-packages/cqlshlib_cql_kernel/test/run_cqlsh.py", line 106
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cqlshlib_cql_kernel/util.py'...
***   File "./lib/python3.5/site-packages/cqlshlib_cql_kernel/util.py", line 143
    print s.getvalue()
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cqlshlib_cql_kernel/wcwidth.py'...
***   File "./lib/python3.5/site-packages/cqlshlib_cql_kernel/wcwidth.py", line 375
    print 'tests pass.'
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
